plugins {
    id "maven-publish"
    id "fabric-loom" version "1.16.3"
    id "babric-loom-extension" version "1.15.3"
}


import groovy.json.JsonOutput
import groovy.json.StringEscapeUtils
import org.gradle.internal.os.OperatingSystem

import java.util.stream.Collectors
import java.util.stream.Stream

version = project.mod_version
group = project.maven_group

def git = project.gradle.sharedServices.registerIfAbsent("git", GitService.class, spec -> {
    spec.parameters { it ->
        it.rootProjectDir.set(project.rootDir)
        it.rootProjectBuildDir.set(project.layout.buildDirectory as Provider<Directory>)
    }
}) as Provider<GitService>

base {
    archivesName = project.archives_base_name
}

loom {
    accessWidenerPath = file("src/main/resources/${project.mod_id}.accesswidener")

    // Our custom manifest replaces LWJGL2 with our LWJGL3 injector.
    // customMinecraftMetadata = ""

    if (OperatingSystem.current() == OperatingSystem.MAC_OS) {
        runConfigs.configureEach {
            vmArg "-XstartOnFirstThread"
        }
    }

    runs {
        client {
            client()
            // TODO: add sponge-mixin agent automatically
            vmArgs("-XX:+UnlockDiagnosticVMOptions", "-XX:+UseCompactObjectHeaders")

            // TODO: make optional?
            programArgs("--glDebugContext")
        }
    }
}

babric {
    // Disable gambac library (M1 colours fix.)
    // Our LWJGL3 injector already deals with it.
    disableM1Fixes.set(true)
    disablePomOverride.set(true)
}

repositories {
    // Used for Nostalgia mappings.
    maven {
        name = "Wisp Forest"
        url = "https://maven.wispforest.io"
    }

    // Used for Brigadier.
    maven {
        name = "Mojang"
        url = "https://libraries.minecraft.net"
    }

    // Used for projects without a maven, but on GitHub repos with working build scripts.
    maven {
        name = "Jitpack"
        url = "https://jitpack.io"
    }
}

static String getOsArchSuffix() {
    def arch = System.getProperty("os.arch")
    return switch (arch) {
        case "amd64", "x86_64": yield ""
        case "x86": yield "x86"
        case "arm64", "aarch64": yield "arm64"
        case "arm", "arm32": yield "arm32"
        default: throw new IllegalStateException("Unsupported arch: " + arch)
    }
}

static String getLwjglNativesPrefix() {
    def os = OperatingSystem.current()
    return switch (os) {
        case OperatingSystem.LINUX: yield "natives-linux"
        case OperatingSystem.MAC_OS: yield "natives-macos"
        case OperatingSystem.WINDOWS: yield "natives-windows"
        default: throw new IllegalStateException("Unsupported OS: " + os)
    }
}

// libs.versions.toml doesn't support classifiers... insert it manually
Provider<MinimalExternalModuleDependency> classified(Provider<MinimalExternalModuleDependency> dependency, String classifier) {
    dependencies.variantOf(dependency, { it.classifier(classifier) }) as Provider<MinimalExternalModuleDependency>
}

dependencies {
    implementation libs.lwjgl.injector

    implementation platform(libs.lwjgl.bom)

    implementation libs.lwjgl.glfw
    implementation libs.lwjgl.stb
    implementation libs.lwjgl.opengl

    def lwjglNatives = Stream.of(getLwjglNativesPrefix(), getOsArchSuffix())
        .filter(part -> !part.isBlank())
        .collect(Collectors.joining("-"))

    runtimeOnly classified(libs.lwjgl.core, lwjglNatives)
    runtimeOnly classified(libs.lwjgl.glfw, lwjglNatives)
    runtimeOnly classified(libs.lwjgl.openal, lwjglNatives)
    runtimeOnly classified(libs.lwjgl.opengl, lwjglNatives)
    runtimeOnly classified(libs.lwjgl.stb, lwjglNatives)

    // Rhino is the JS engine: https://github.com/mozilla/rhino/releases
    // Archived versions: https://www-archive.mozilla.org/rhino/rhino16r2
    implementation libs.rhino

    minecraft libs.minecraft
    mappings classified(libs.nostalgia.mappings, "v2")
    modImplementation libs.fabric.loader

    // Override ASM to support Java 25
    implementation libs.asm.core
    implementation libs.asm.analysis
    implementation libs.asm.commons
    implementation libs.asm.tree
    implementation libs.asm.util

    // Fabric-ASM allows us to extend enums.
    modImplementation "com.github.Chocohead:Fabric-ASM:v2.3"
    include "com.github.Chocohead:Fabric-ASM:v2.3"

    // FastUtil provides specialized collection types.
    implementation "it.unimi.dsi:fastutil-core:8.5.15"

    // Brigadier provides modern command parsing.
    modImplementation "com.mojang:brigadier:1.3.10"

    implementation "org.slf4j:slf4j-api:1.8.0-beta4"
    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.18.0"

    implementation "com.google.guava:guava:33.4.0-jre"
    implementation "org.apache.commons:commons-lang3:3.19.0"

    // Optional dependencies for filesystem icon rendering.
    implementation "net.java.dev.jna:jna:5.17.0"
    implementation "net.java.dev.jna:jna-platform:5.17.0"

    implementation "com.github.bailuk:java-gtk:0.6.0"
}

configurations.configureEach {
    // Removes LWJGL2 dependencies
    exclude group: "org.lwjgl.lwjgl"
}

processResources {
    usesService(git)
    def gitProps = git.get().properties.collectEntries([:]) { e ->
        e.value instanceof Provider ? [e.key, e.value.get()] : null
    }

    // Extract useful properties from our project.
    def props = [
        "version"              : project.property("version"),
        "fabric_loader_version": libs.fabric.loader.get().version,
        "build_env"            : [
            // Dump git info into dedicated property.
            git: StringEscapeUtils.escapeJava(JsonOutput.toJson(gitProps))
        ]
    ]

    filesMatching("fabric.mod.json") {
        expand props
    }
}

tasks.register("fixRunResources", Copy) {
    dependsOn("processResources")

    from(layout.buildDirectory.dir("resources/main"))
    into("out/production/resources")
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and
    // to the "build" task if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

jar {
    def name = archiveBaseName.get()
    from("LICENSE") {
        rename { "${it}_${name}" }
    }
}

// For information on how to set up publishing,
// see https://docs.gradle.org/current/userguide/publishing_maven.html
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact,
        // not for retrieving dependencies.
    }
}

tasks.register("packLauncherInstances") {
    def runtimeClasspath = java.sourceSets.main.runtimeClasspath
    doFirst {
        runtimeClasspath.forEach {
            println it
        }
    }
}